# NY_taxi_rides_monitor

./: README.md  pyproject.toml
anaconda-ubuntu/: Dockerfile  docker-compose.yml
notebooks/: 01_fetach_taxi_data.ipynb  01_fetch_data.ipynb  02_validate_and_save.ipynb  03_transform_processed_data_into_ts_data.ipynb  04_transform_ts_data_into_features_and_targets.ipynb  05_transform_raw_data_into_features_and_targets.ipynb  06_visualization.ipynb  07_baseline_models.ipynb  08_xgboost_model.ipynb  09_lightgbm_model.ipynb  10_lgm_with_fe.ipynb  11_lgm_hyper.ipynb  12_load_features_hopsworks.ipynb  13_feature_pipeline.ipynb
