[project]
name = "taxi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Arunkarthik Periyaswamy",email = "arunkarthikperiyaswamy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "taxi_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
